# AAL

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  make_report.py  pyproject.toml
.github/workflows/: ci.yaml
aal/: __init__.py  cli.py  dashboard.py
aal/adversaries/: bandit_prompt.py  base.py
aal/core/: loop.py  types.py
aal/defenders/: base.py  coach_self_reflection.py
aal/logging_utils/: events.py
aal/metrics/: basic.py  elo.py
aal/models/: __init__.py  claude_api.py  dummy.py  gemini.py  openai_compat.py
aal/safety/: policy.py
aal/storage/: trajectory.py
docs/: design.md  metrics.md
examples/configs/: quick.yaml
runs/demo1/: summary.json  trajectory.jsonl
runs/demo2/: summary.json  trajectory.jsonl
runs/demo3/: summary.json  trajectory.jsonl
tests/: conftest.py  test_bandit.py  test_loop.py  test_metrics_half_life.py  test_new_features.py  test_self_reflect.py  test_trajectory_roundtrip.py
