[project]
name = "aal"
version = "0.1.0"
description = "Adaptive Adversarial Looping - learning under attack"
authors = [{name = "AAL Contributors"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools.packages.find]
include = ["aal*"]

[project.scripts]
aal = "aal.cli:main"

[project.optional-dependencies]
claude = ["anthropic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
